--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
     <title>Saludo</title>
 </head>
 <body>
-    <button id="saludarButton">Saludar</button>
+    <button id="saludarButton" onclick="mostrarAlerta()">Saludar</button>
 
     <script>
-        const botonSaludar = document.getElementById("saludarButton");
-
-        botonSaludar.addEventListener("click", function() {
-            alert("¡Hola! ¡Bienvenido!");
-        });
+        function mostrarAlerta() {
+            alert("¡Hola!");
+        }
     </script>
 </body>
 </html>
