--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saludo</title>
+    <style>
+        .boton-container {
+            padding: 5px;
+            background-color: green;
+        }
+    </style>
 </head>
 <body>
-    <button id="saludarButton" onclick="mostrarAlerta()">Saludar</button>
+    <div class="boton-container">
+        <button id="saludarButton" onclick="mostrarAlerta()">Saludar</button>
+    </div>
 
-    <script>
-        function mostrarAlerta() {
-            alert("¡Hola!");
-        }
-    </script>
+    <script src="eventos.js"></script>
 </body>
 </html>
