--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="boton-container">
-        <button id="saludarButton" onclick="mostrarAlerta()">Saludar</button>
+        <button id="saludarButton">Saludar</button>
     </div>
 
     <script src="eventos.js"></script>
